src 디렉토리 생성 및 이터레이터 수강 완료

--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "typescript": "^2.9.2"
   },
   "scripts": {
-    "transfile": "tsc genericExample/generic1.ts"
+    "transfile": "tsc iteratorExample/iteratorExample.ts"
   }
 }
