--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,11 @@
     "target": "es6", /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
     "module": "commonjs", /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
     /* Strict Type-Ch ecking Options */
-    "strict": true, /* Enable all strict type-checking options. */
-    "outDir": "outPut"
+    // "strict": true, /* Enable all strict type-checking options. */
+    "outDir": "outPut",
+    "experimentalDecorators": true
   }
 }
-
-
 /*
 compileOnSave
   - 파일 저장 시 자동으로 compile 하도록 설정
